# membox

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.crew/audit/: prune.jsonl
.crew/state/metrics/: 2026-06-09.jsonl
.github/workflows/: auto-merge.yml  ci.yml
.serena/: project.yml
docs/: HANDOFF.md  code-standards.md  repository-map.md  roadmap.md  spec-v0.2-draft.md  spec.md  workflow.md
docs/agent/: 01-project-contract.md  02-architecture-boundaries.md  03-engineering-rules.md
docs/design/: agent-memory-lifecycle.md  cjk-trigram-fts.md  graph-fts-fusion.md  retrieval-architecture.md
docs/issue/: README.md
docs/issue/agent-as-llm-provider/: README.md
docs/issue/checkpoint-command/: README.md
docs/issue/claude-adapter/: README.md
docs/issue/dream-consolidation/: README.md
docs/issue/pr5-deferred/: R1-atomic-apply-batching.md  R2-fts-conflict-pairing.md  R3-llm-comparator.md  R4-gate-v4.md  README.md
docs/issue/stabilization-s1/: D1-history-around-msgid-not-found.md  D2-history-search-no-hits-on-known-text.md  D3-memory-extract-creates-zero-units.md  D4-corrupt-jsonl-silently-loses-records.md  D5-distill-apply-error-message-stale.md  D6-session-root-error-msg-conflates-cases.md  README.md
docs/plans/: plan_01_phase_c_triage_memory_units.md  plan_02_eval_corpus_resnapshot.md  plan_03_ingest_performance.md  plan_04_phase_d_consolidation.md  plan_05_phase_e_query_fusion.md  plan_06_phase_f_distill.md
docs/spec/: spec_01_core.md  spec_02_memory_lifecycle.md
eval/: README.md  gold.yaml
eval/lifecycle/: README.md  comparator_cases.yaml  expectations.yaml
eval/lifecycle/history/: c1_explicit_rules.jsonl  c2_ephemeral_chatter.jsonl  c3_decision.jsonl  c3_plan.jsonl  c4_fact_new.jsonl  c4_fact_old.jsonl  c5_repeated_failure.jsonl  c5_repeated_failure_b.jsonl  c6_conflict_a.jsonl  c6_conflict_b.jsonl  c7_correction_new.jsonl  c7_correction_old.jsonl  c8_tool_noise.jsonl  c9_wakeup_template.jsonl  c9_wakeup_template_b.jsonl
examples/: demo.py
scripts/: __init__.py  bump_version.py  eval_lifecycle_comparator.py  eval_memory.py  generate_changelog.py  update_repository_map.py
skills/: membox-skill.md
src/membox/: __init__.py  agent.py  cli.py  config.py  embed.py  extract.py  normalize.py  schema.py  store.py
src/membox/cli/: __init__.py  __main__.py  _common.py
src/membox/cli/commands/: __init__.py  checkpoint.py  distill.py  extract_prompt.py  history.py  ingest.py  ingest_graph.py  listing.py  memory.py  query.py  queue.py  version.py
src/membox/core/: __init__.py  agent.py  chunking.py  consolidate.py  distill.py  export.py  history_import.py  lifecycle.py  project.py  tokens.py  triage.py  worker.py
src/membox/core/store/: __init__.py  connection.py  documents.py  entities.py  fts.py  history.py  leases.py  memory_units.py  meta_guard.py  migrations.py  queue.py  relations.py  retrieval.py  vectors.py
src/membox/model/: __init__.py  schema.py
src/membox/providers/: __init__.py  base.py  openai_compat.py
src/membox/services/: __init__.py  embedding.py  extraction.py
src/membox/services/importers/: __init__.py  base.py  claude_jsonl.py  codex_jsonl.py  common.py  membox_jsonl.py  pi_jsonl.py
src/membox/services/prompts/: __init__.py  extraction.py
tests/: __init__.py  test_agent_provider.py  test_bfs.py  test_checkpoint.py  test_chunking.py  test_claude_importer.py  test_cli.py  test_concurrency.py  test_consolidation.py  test_disambiguation.py  test_distill.py  test_eval_corpus.py  test_extraction_length_limits.py  test_fts_fallback.py  test_fusion.py  test_history_cli.py  test_history_importers.py  test_history_store.py  test_ingestion.py  test_lifecycle_acceptance.py  test_lifecycle_eval_fixtures.py  test_m3_retrieval.py  test_memory_export.py  test_memory_units.py  test_normalize.py  test_queue.py  test_release_scripts.py  test_skeleton.py  test_storage.py  test_supersession.py  test_version.py
