[project]
name = "membox"
version = "0.1.0"
description = "Local knowledge graph + RAG memory layer for coding agents"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "royzhu" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2",
    "typer>=0.15",
    "rich>=13",
]

[project.scripts]
membox = "membox.cli:app"

[project.optional-dependencies]
llm = [
    "openai>=1",
]
ast = [
    "tree-sitter>=0.24",
    "tree-sitter-python>=0.23",
]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "pytest-timeout>=2.4",
    "ruff>=0.11",
    "pre-commit>=4",
    "mypy>=1.15",
]

[project.urls]
Repository = "https://github.com/royzhu/membox"

# ── dependency groups (uv) ─────────────────────────────────────────────
[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "ruff>=0.11",
    "pre-commit>=4",
    "mypy>=1.15",
    "openai>=1",
    "tree-sitter>=0.24",
    "tree-sitter-python>=0.23",
    "pyyaml>=6",
    "pytest-timeout>=2.4.0",
]

# ── ruff: lint + format ───────────────────────────────────────────────
[tool.ruff]
target-version = "py313"
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
    "C4",   # flake8-comprehensions
    "EM",   # flake8-errmsg
    "T20",  # flake8-print
    "PERF", # perflint
    "S",    # flake8-bandit (security)
]
ignore = [
    "E501",   # line length handled by formatter
    "S101",   # assert is fine in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "T20", "D", "TC003"]
# typer requires runtime-available Path and uses Argument/Option in default values
"src/membox/cli.py" = ["B008", "TC003"]
"src/membox/cli/**/*.py" = ["B008", "TC003"]
# agent.py uses Path in runtime function signatures and direct code
"src/membox/core/agent.py" = ["TC003"]
# demo script: print is intentional; Chinese text uses fullwidth punctuation by convention
"examples/**/*" = ["T20", "RUF001"]
# eval harness: print is the reporting mechanism (CLI tool, not library code)
"scripts/eval_memory.py" = ["T20"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ── pytest ─────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--import-mode=importlib",
    "-ra",
    "--strict-markers",
    "--strict-config",
]
timeout = 10
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

# ── mypy ───────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "typer.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "openai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tree_sitter.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

# ── coverage ───────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["membox"]
source_pkgs = ["membox"]

[tool.coverage.paths]
source = ["src/", "*/site-packages/"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 80

# ── build system ───────────────────────────────────────────────────────
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/membox"]
